<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vosk Demo</string>
    <string name="recognize_file">Input from File(s)</string>
    <string name="recognize_folder">Input from Folder</string>
    <string name="recognize_microphone">Input from Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="clear_transcript">Clear Transcript</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="elapsed">Result %s elapsed %d milliseconds\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Pause</string>
    <string name="continueRecognition">Continue</string>

</resources>
