<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <Button
        android:id="@+id/recognize_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognize_file"/>

    <Button
        android:id="@+id/recognize_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognize_folder"/>

    <Button
        android:id="@+id/recognize_mic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recognize_microphone"/>

    <ToggleButton
        android:id="@+id/pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/pause"
        android:textOn="@string/continueRecognition"/>

    <Button
        android:id="@+id/clear_transcript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_transcript"/>

    <TextView
        android:id="@+id/tooltip_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
